@@ -6,24 +6,29 @@ import net.minecraft.util.Identifier;
 import java.util.*;
 
 public class GauntletHeldState {
-    private static final Map<UUID, Set<Identifier>> HELD_ACTIVE = new HashMap<>();
+    private static final Map<PlayerEntity, Set<Identifier>> HELD_ACTIVE
+            = new IdentityHashMap<>();
 
     public static boolean isHeld(PlayerEntity player, Identifier abilityId) {
-        return HELD_ACTIVE.getOrDefault(player.getUuid(), Set.of())
-                .contains(abilityId);
+        Set<Identifier> set = HELD_ACTIVE.get(player);  // no Set.of() allocation on miss
+        return set != null && set.contains(abilityId);
     }
 
     public static Set<Identifier> getHeld(PlayerEntity player) {
-        return HELD_ACTIVE.getOrDefault(player.getUuid(), Set.of());
+        Set<Identifier> set = HELD_ACTIVE.get(player);
+        return set != null ? set : Collections.emptySet(); // emptySet() is a cached singleton
     }
 
     public static void setHeld(PlayerEntity player, Identifier abilityId, boolean held) {
-        Set<Identifier> active = HELD_ACTIVE.computeIfAbsent(player.getUuid(), k -> new HashSet<>());
-        if (held) active.add(abilityId);
-        else active.remove(abilityId);
+        if (held) {
+            HELD_ACTIVE.computeIfAbsent(player, k -> new HashSet<>()).add(abilityId);
+        } else {
+            Set<Identifier> set = HELD_ACTIVE.get(player);
+            if (set != null) set.remove(abilityId);
+        }
     }
 
     public static void clear(PlayerEntity player) {
-        HELD_ACTIVE.remove(player.getUuid());
+        HELD_ACTIVE.remove(player);
     }
 }
